argo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argo
  namespace: argo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/common-name: "argo"
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: argo.lilalala.com
      name: argo-lilalala-com-https
      port: 443
      protocol: HTTPS
  tls:
    certificateRefs:
      - kind: Secret
        name: argocd-server-tls
